style: Sign up form restriction

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -65,7 +65,7 @@
 
       <button 
               class="feat-button"
-              *ngIf="user" 
+              *ngIf="user && user.username === ''" 
               color="white"
               mat-raised-button 
               [routerLink]="['register']"
