--- a/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.css
+++ b/museum-frontend/src/app/feature-modules/administration/add-employee-form/add-employee-form.component.css
@@ -72,7 +72,7 @@
   margin-top: 6%;
   width: 45%;
   height: 45px;
-  background: gray;
+  background: rgb(178, 178, 178);
   border: none;
   outline: none;
   border-radius: 40px;
@@ -84,7 +84,7 @@
 }
 
 .wrapper .btn:hover {
-  background-color: gray; 
+  background-color: rgb(172, 172, 172); 
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2); 
   transform: scale(1.03);
   transition: transform 300ms ease;
@@ -92,14 +92,14 @@
 
 .wrapper .buttons {
   display: flex;
-  gap: 10%;
+  gap: 15%;
 }
 
 .input-box select {
-  width: 100%;
+  width: 102%;
   height: 100%;
-  border: 2px solid black;
-  border-radius: 40px; /* Rounded corners */
+  border: 2px solid #1b1b1b;
+  border-radius: 40px;
   font-size: 16px;
   padding: 10px;
   background-color: transparent;
@@ -108,21 +108,18 @@
   color: #1b1b1b;
 }
 
-/* Style options when combo box is open */
 .input-box select:focus option {
-  background-color: #f2f2f2; /* Background color */
-  color: #1b1b1b; /* Text color */
-  border-radius: 10px; /* Rounded corners */
-  padding: 8px; /* Adjust padding for spacing */
+  background-color: #f2f2f2; 
+  color: #1b1b1b;
+  border-radius: 10px;
+  padding: 8px; 
 }
 
-/* Hide default arrow */
 .input-box select::-ms-expand,
 .input-box select::-webkit-select-arrow {
   display: none;
 }
 
-/* Style custom arrow */
 .input-box select::after {
   content: '\25BC';
   position: absolute;
@@ -132,4 +129,3 @@
   pointer-events: none;
   color: #1b1b1b;
 }
-
