feat: Tour view route addition

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -25,7 +25,7 @@
               class="feat-button"
               color="white" 
               mat-raised-button 
-              [routerLink]="['']"> <!-- PROMENITI PUTANJU -->
+              [routerLink]="['tour-view']"> 
         <fa-icon [icon]="faBinoculars" />    
         &nbsp;Tours
       </button>
