Update user profiles

--- a/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/navbar/navbar.component.html
@@ -46,7 +46,7 @@
             *ngIf="user"
             color="white"
             mat-raised-button
-            [routerLink]="['']" 
+            [routerLink]="['profile']" 
       >         <!-- PROMENITI PUTANJU -->
       <fa-icon [icon]="faUser" />    
       &nbsp;My profile
