--- a/museum-frontend/src/styles.css
+++ b/museum-frontend/src/styles.css
@@ -1,4 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
 
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+textarea {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    resize: none;
+    width: 100%;
+    border-radius: 5px;
+    font-size: large;
+}
+
+button {
+    cursor: pointer;
+}
+
+input {
+    width: 100%;
+}
