--- a/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
@@ -2,6 +2,7 @@
   <div class="wrapper">
     <form [formGroup]="addTourForm">
         <h1>Add tour</h1>
+
         <div class="input-box">
             <input 
                     type="text" 
@@ -10,6 +11,7 @@
             />
             <label [class.active]="addTourForm.get('name')?.value || focused === 'name'">Name</label>
         </div>
+
         <div class="input-box">
             <input 
                     type="text" 
@@ -18,14 +20,7 @@
             />
             <label [class.active]="addTourForm.get('description')?.value || focused === 'description'">Description</label>
         </div>
-        <!-- <div class="input-box">
-            <select formControlName="role" required>
-                    <option value="Organizer">Organizer</option>
-                    <option value="Curator">Curator</option>
-                    <option value="Restaurateur">Restaurateur</option>
-            </select>
-            <label>Select Role</label>
-        </div>              OVO TREBA DA BUDE NACIN DA SE ODABERE VODIC. MOZDA I DA BUDE NOVI MODALNI SA PUNIM PRIKAZOM -->
+
         <div class="date-time">
             <div class="input-box">
                 <input 
@@ -43,6 +38,7 @@
                         formControlName="occurrenceTime">
             </div>
         </div>
+
         <div class="input-box">
             <input 
                     type="number" 
@@ -51,6 +47,7 @@
             />
             <label [class.active]="addTourForm.get('capacity')?.value || focused === 'capacity'">Capacity</label>
         </div>
+
         <div class="ticket-prices">
             <div class="input-box">
                 <input 
@@ -69,10 +66,12 @@
                 <label [class.active]="addTourForm.get('minorTicketPrice')?.value || focused === 'minorTicketPrice'">Minor Ticker Price</label>
             </div>
         </div>
+
         <div class="buttons">
           <button type="submit" class="btn" [@buttonState]="buttonState"></button>
           <button type="submit" class="btn" [@buttonState]="buttonState" (click)="selectRouteButtonClicked()">Select route</button>
         </div>
+
         <div class="image-form-field form-div">
             <label for="file-upload" class="custom-file-upload">
                 Upload image
@@ -84,27 +83,27 @@
                 (change)="onSelectImage($event)"
             />
         </div>
-        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="addTourButtonClicked()">Add</button>
 
-        <div class="admin-choosing">
-            <mat-label id="choose-admin">Choose Guide</mat-label>
-            <table>
-              <tbody>
-                <tr *ngFor="let admin of curators">
-                  <td>{{ admin.username }}</td>
-                  <td>&nbsp;&nbsp;</td>
-                  <td>
-                    <button (click)="onAddAdminClicked(admin)" 
-                            color="primary"
-                            type="submit"
-                            mat-raised-button>
-                      Add
-                    </button>          
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        <div class="curator-choosing">
+          <mat-label id="choose-curator">Choose Guide</mat-label>
+          <table id="curator-table">
+            <tbody>
+              <tr *ngFor="let curator of curators">
+                <td>{{ curator.firstName }}</td>
+                <td>{{ curator.lastName }}</td>
+                <td>&nbsp;&nbsp;</td>
+                <td>
+                  <button (click)="onChooseClicked(curator)" 
+                          type="submit">
+                    Choose
+                  </button>          
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="addTourButtonClicked()">Add</button>
     </form>
   </div>
 </div>
