--- a/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
@@ -66,23 +66,17 @@
                 <label [class.active]="addTourForm.get('minorTicketPrice')?.value || focused === 'minorTicketPrice'">Minor Ticker Price</label>
             </div>
         </div>
-
-        <div class="buttons">
-          <button type="submit" class="btn" [@buttonState]="buttonState"></button>
-          <button type="submit" class="btn" [@buttonState]="buttonState" (click)="selectRouteButtonClicked()">Select route</button>
+        
+        <div class="input-box">
+          <input 
+                  type="text" 
+                  formControlName="picturePath"
+                  required
+          />
+          <label [class.active]="addTourForm.get('picturePath')?.value || focused === 'picturePath'">Insert image path</label>
         </div>
 
-        <div class="image-form-field form-div">
-            <label for="file-upload" class="custom-file-upload">
-                Upload image
-            </label>
-            <input
-                id="file-upload"
-                accept="image/*"
-                type="file"
-                (change)="onSelectImage($event)"
-            />
-        </div>
+        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="selectRouteButtonClicked()">Select route</button>
 
         <div class="curator-choosing">
           <mat-label id="choose-curator">Choose Guide</mat-label>
