--- a/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/tour-view/tour-view.component.html
@@ -1,10 +1,15 @@
 <div class="overview" [ngStyle]="{'background-size': backgroundSize}">
-  <h2>Tours</h2>
-  <p>Neki opis veoma vazan kako se ova stranica uopste i koristi</p>
-  &nbsp;
+  <div class="h2-wrapper">
+    <h2>Tours</h2>
+  </div>
+  <br>
+  <div class="p-wrapper">
+    <p>Welcome to your organizer dashboard! Here, you can effortlessly create, edit, and manage your tours with ease. 
+      Whether it's crafting exciting new experiences or fine-tuning existing ones, this is your hub for bringing unforgettable adventures to life</p>
+  </div>
   <button
           type="submit" 
-          class="btn" 
+          class="add-tour-btn" 
           (click)="addToursButtonClicked()"
           [@buttonState]="toursButtonState">
     <fa-icon [icon]="faPlus" />
