--- a/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.css
+++ b/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.css
@@ -4,13 +4,31 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1001; 
+  background-color: rgba(255, 255, 255, .1); 
+  padding: 20px;
+  backdrop-filter: blur(15px);
+  color: #fff;
+  border: 3px solid rgba(255, 255, 255, .2);
+  border-radius: 10px;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000; 
 }
 
 .wrapper {
   width: 90%;
   height: 90%;
-  border: 2px solid rgba(255, 255, 255, .2);
-  color: #1b1b1b;
   border-radius: 10px;
   gap: 15px;
 }
@@ -35,6 +53,7 @@
   border-radius: 40px;
   font-size: 16px;
   padding: 2% 3%;
+  border: 2px solid #fff;
 }
 
 .input-box input::placeholder {
@@ -64,13 +83,14 @@
   top: -13px;
   left: 10px;
   font-size: 13px;
+  color: #fff;
 }
 
 .wrapper .btn {
   margin-top: 6%;
   width: 50%;
   height: 45px;
-  background: rgb(178, 178, 178);
+  background: #fff;
   border: none;
   outline: none;
   border-radius: 40px;
@@ -93,26 +113,6 @@
   gap: 9%;
 }
 
-.input-box select {
-  width: 102%;
-  height: 100%;
-  border: 2px solid #1b1b1b;
-  border-radius: 40px;
-  font-size: 16px;
-  padding: 10px;
-  background-color: transparent;
-  appearance: none;
-  -webkit-appearance: none;
-  color: #1b1b1b;
-}
-
-.input-box select:focus option {
-  background-color: #f2f2f2; 
-  color: #1b1b1b;
-  border-radius: 10px;
-  padding: 8px; 
-}
-
 .input-box select::-ms-expand,
 .input-box select::-webkit-select-arrow {
   display: none;
@@ -125,7 +125,7 @@
   right: 10px;
   transform: translateY(-50%);
   pointer-events: none;
-  color: #1b1b1b;
+  color: #fff;
 }
 
 .date-picker-input {
@@ -202,7 +202,7 @@ img {
   margin-top: 5%;
   width: 100%;
   height: 45px;
-  background: rgb(178, 178, 178);
+  background: #fff;
   border: none;
   outline: none;
   border-radius: 40px;
@@ -233,7 +233,7 @@ img {
 .curator-choosing button{
   width: 120%;
   height: 30px;
-  background: rgb(178, 178, 178);
+  background: #fff;
   border: none;
   outline: none;
   border-radius: 40px;
