--- a/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
+++ b/museum-frontend/src/app/feature-modules/tours/components/add-tour-form/add-tour-form.component.html
@@ -1,3 +1,4 @@
+<div class="modal-overlay" (click)="overviewClicked()"></div>
 <div class="dialogue">
   <div class="wrapper">
     <form [formGroup]="addTourForm">
