--- a/museum-frontend/src/app/feature-modules/layout/home/home.component.html
+++ b/museum-frontend/src/app/feature-modules/layout/home/home.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class="card-container">
-    <div class="card-group" data-index="0" (click)="cardGroupClicked()" [@fadeInOut]> 
+    <div class="card-group exhibition-cards" data-index="0" (click)="exhibitionsButtonClicked()" [@fadeInOut]> 
         <div class="little-card card"></div>
         
         <div class="big-card card"></div>
@@ -34,7 +34,7 @@
         
         <div class="big-card card"></div>  
     </div>
-    <div class="card-group" data-index="1" (click)="cardGroupClicked()" [@fadeInOut]> 
+    <div class="card-group tour-cards" data-index="1" (click)="toursButtonClicked()" [@fadeInOut]> 
         <div class="little-card card"></div>
         
         <div class="big-card card"></div>
@@ -51,7 +51,7 @@
         
         <div class="big-card card"></div>  
     </div>
-    <div class="card-group" data-index="2" (click)="cardGroupClicked()" [@fadeInOut]> 
+    <div class="card-group event-cards" data-index="2" (click)="eventsButtonClicked()" [@fadeInOut]> 
         <div class="little-card card"></div>
         
         <div class="big-card card"></div>
