--- a/museum-frontend/src/app/feature-modules/administration/components/employees-view/employees-view.component.html
+++ b/museum-frontend/src/app/feature-modules/administration/components/employees-view/employees-view.component.html
@@ -8,8 +8,8 @@
             >+ Add employee
     </button>
   <app-search-filter (searchChange)="onFilterChange($event)"></app-search-filter>
-  <app-sort-dropdown></app-sort-dropdown>
-  <app-employees-table [employees]="filteredEmployees"></app-employees-table>
+  <app-sort-dropdown (sortChange)="onSortChange($event)"></app-sort-dropdown>
+  <app-employees-table [employees]="sortedEmployees"></app-employees-table>
 
   
 </div>
