Lock/Unlock Employee account

--- a/museum-frontend/src/app/feature-modules/administration/components/employees-table/employees-table.component.html
+++ b/museum-frontend/src/app/feature-modules/administration/components/employees-table/employees-table.component.html
@@ -16,6 +16,7 @@
         <td>{{ employee.role }}</td>
         <td>{{ employee.email }}</td>
         <td>
+          <button (click)="onToggleLock(employee.id)">Lock/Unlock</button>
           <!-- ... action buttons ... -->
         </td>
       </tr>
