feat: added form for item adding

--- a/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.html
+++ b/museum-frontend/src/app/feature-modules/items/artifacts/artifacts.component.html
@@ -1,1 +1,11 @@
-<p>artifacts works!</p>
+<div class="overlay">
+
+    <button 
+              type="submit" 
+              class="btn" 
+              (click)="addItemButtonClicked()"
+              [@buttonState]="addItemButtonState"
+              >+ Add item
+    </button>
+</div>
+  
