--- a/museum-frontend/src/app/feature-modules/items/artifact-form/artifact-form.component.html
+++ b/museum-frontend/src/app/feature-modules/items/artifact-form/artifact-form.component.html
@@ -3,7 +3,7 @@
 <div class="dialogue">
   <div class="wrapper">
     <form [formGroup]="addItemForm">
-        <h1>Add tour</h1>
+        <h1>Add item</h1>
 
         <div class="input-box">
             <input 
@@ -30,7 +30,7 @@
                     formControlName="authorsName"
                     required
             />
-            <label [class.active]="addTourForm.get('authorsName')?.value || focused === 'authorsName'">Authors Name</label>
+            <label [class.active]="addItemForm.get('authorsName')?.value || focused === 'authorsName'">Authors Name</label>
         </div>
 
         <div class="input-box">
@@ -39,7 +39,7 @@
                     formControlName="yearOfCreation"
                     required
             />
-            <label [class.active]="addTourForm.get('yearOfCreation')?.value || focused === 'yearOfCreation'">Year Of Creation</label>
+            <label [class.active]="addItemForm.get('yearOfCreation')?.value || focused === 'yearOfCreation'">Year Of Creation</label>
         </div>
         
         <div class="input-box">
@@ -48,7 +48,7 @@
                     formControlName="period"
                     required
             />
-            <label [class.active]="addTourForm.get('period')?.value || focused === 'period'">Period</label>
+            <label [class.active]="addItemForm.get('period')?.value || focused === 'period'">Period</label>
         </div>
         
 
@@ -59,31 +59,28 @@
                   formControlName="picture"
                   required
           />
-          <label [class.active]="addTourForm.get('picture')?.value || focused === 'picture'">Insert image path</label>
+          <label [class.active]="addItemForm.get('picture')?.value || focused === 'picture'">Insert image path</label>
         </div>
 
-        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="selectRouteButtonClicked()">Select route</button>
-
-        <div class="curator-choosing">
-          <mat-label id="choose-curator">Choose Guide</mat-label>
-          <table id="curator-table">
-            <tbody>
-              <tr *ngFor="let curator of curators">
-                <td>{{ curator.firstName }}</td>
-                <td>{{ curator.lastName }}</td>
-                <td>&nbsp;&nbsp;</td>
-                <td>
-                  <button (click)="onChooseClicked(curator)" 
-                          type="submit">
-                    Choose
-                  </button>          
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="input-box">
+          <select formControlName="category" required>
+                  <option value="Painting">Painting</option>
+                  <option value="Drawing">Drawing</option>
+                  <option value="Sculpture">Sculpture</option>
+                  <option value="Print">Print</option>
+                  <option value="Photograph">Photograph</option>
+                  <option value="Clothing">Clothing</option>
+                  <option value="Specimen">Specimen</option>
+                  <option value="Fossil">Fossil</option>
+                  <option value="Animal">Animal</option>
+                  <option value="Mineral">Mineral</option>
+                  <option value="Pottery">Pottery</option>
+                  <option value="Jewelry">Jewelry</option>
+          </select>
+          <label>Select catrgory</label>
         </div>
 
-        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="addTourButtonClicked()">Add</button>
+        <button type="submit" class="submit-btn" [@buttonState]="buttonState" (click)="addItemButtonClicked()">Add</button>
     </form>
   </div>
 </div>
