--- a/museum-frontend/src/app/feature-modules/administration/components/lock-confirmation-dialog/lock-confirmation-dialog.component.html
+++ b/museum-frontend/src/app/feature-modules/administration/components/lock-confirmation-dialog/lock-confirmation-dialog.component.html
@@ -1,1 +1,10 @@
-<p>lock-confirmation-dialog works!</p>
+<div class="mat-dialog-container">
+    <h2 mat-dialog-title>{{ title }}</h2>
+    <mat-dialog-content>{{ message }}</mat-dialog-content>
+<!-- lock-confirmation-dialog.component.html -->
+    <mat-dialog-actions align="end">
+        <button mat-button [mat-dialog-close]="true" cdkFocusInitial class="mat-primary">{{ data.isLocked ? 'Unlock' : 'Lock' }}</button>
+        <button mat-button mat-dialog-close class="mat-warn">Cancel</button>
+    </mat-dialog-actions>
+</div>
+
